--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.12",
     "rapidapi-connect": "0.0.6",
     "request": "^2.88.0",
